--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -5,11 +5,11 @@ Trino works together with the Apache Hive metastore and S3 bucket.
 == Prerequisites
 
 * Deployed Stackable Apache Hive metastore
-* Deployed Stackable https://github.com/stackabletech/secret-operator[secret-operator]
 * Accessible S3 Bucket
     ** Endpoint, access-key and secret-key
     ** Data in the Bucket (we use the https://archive.ics.uci.edu/ml/datasets/iris[Iris] dataset here)
-* Optional for authorization: Deployed Stackable OPA cluster + RegoRule server
+* Optional deployed Stackable https://github.com/stackabletech/secret-operator[Secret-Operator] for https
+* Optional for authorization: Deployed Stackable https://github.com/stackabletech/opa-operator[OPA-Operator] + https://github.com/stackabletech/regorule-operator[Regorule-Operator]
 * Optional to test queries with https://repo.stackable.tech/#browse/browse:packages:trino-cli%2Ftrino-cli-363-executable.jar[Trino CLI]
 
 == Installation
@@ -41,11 +41,7 @@ We provide user authentication via secret that can be referred in the custom res
           namespace: default
           name: simple-trino-users-secret
 
-These secrets need to be created manually before startup (check `examples/simple-trino-users-secret.yaml`):
-
-    kubectl apply -f examples/simple-trino-users-secret.yaml
-
-The secret looks the following:
+These secrets need to be created manually before startup. The secret may look like the following snippet:
 
     apiVersion: v1
     kind: Secret
@@ -125,7 +121,48 @@ With the prerequisites fulfilled, the CRD for this operator must be created:
 
     kubectl apply -f /etc/stackable/trino-operator/crd/trinocluster.crd.yaml
 
-To create a single node Trino (v362) cluster. Please adapt the `s3` with your credentials.
+==== Insecure for testing:
+
+Create an insecure single node Trino (v362) cluster for testing. You will access the UI/CLI via http and no user / password or authorization is required. Please adapt the `s3` settings with your credentials (check `examples/simple-trino-cluster.yaml` for an example setting up Hive and Trino):
+
+    apiVersion: trino.stackable.tech/v1alpha1
+    kind: TrinoCluster
+    metadata:
+      name: simple-trino
+    spec:
+      version: "0.0.362"
+      nodeEnvironment: production
+      hiveConfigMapName: simple-hive-derby
+      s3:
+        endPoint: changeme
+        accessKey: changeme
+        secretKey: changeme
+        sslEnabled: false
+        pathStyleAccess: true
+      coordinators:
+        roleGroups:
+          default:
+            selector:
+              matchLabels:
+                kubernetes.io/os: linux
+            replicas: 1
+            config: {}
+      workers:
+        roleGroups:
+          default:
+            selector:
+              matchLabels:
+                kubernetes.io/os: linux
+            replicas: 1
+            config: {}
+
+To access the CLI please execute:
+
+    ./trino-cli-362-executable.jar --debug --server http://<node>:<http-port> --user=admin
+
+==== Secure (https) for production:
+
+Create a secure single node Trino (v362) cluster. This will disable the UI access via http and requires username and password from the secret above. Please adapt the `s3` settings with your credentials (check `examples/simple-trino-cluster-authentication-opa-authorization.yaml` for a full example setting up Hive, OPA, Secrets and Trino):
 
     cat <<EOF | kubectl apply -f -
     apiVersion: trino.stackable.tech/v1alpha1
@@ -135,12 +172,8 @@ To create a single node Trino (v362) cluster. Please adapt the `s3` with your cr
     spec:
       version: "0.0.362"
       nodeEnvironment: production
-      hive:
-        namespace: default
-        name: simple-derby
-      opa:
-        namespace: default
-        name: simple-opa
+      hiveConfigMapName: simple-hive-derby
+      opaConfigMapName: simple-opa
       authentication:
         method:
           multiUser:
@@ -192,11 +225,13 @@ To create a single node Trino (v362) cluster. Please adapt the `s3` with your cr
             config: {}
     EOF
 
-Assuming you've downloaded and installed the Trino client, connect to the Trino coordinator:
+To access the CLI please execute:
 
-    ./trino.jar --debug --server https://<node_name>:<https-port> --user=admin --password
+    ./trino-cli-362-executable.jar --debug --server https://<host>:<https-port> --user=admin --password --insecure
 
 If you use self signed certificates, you also need to add `--insecure` to the command above.
+
+=== Test Trino with Hive and S3
 
 Create a schema and a  table for the Iris data located in S3:
 
@@ -222,6 +257,8 @@ Query the data:
         class
     FROM hive.iris.iris_parquet
     LIMIT 10;
+
+=== Tips
 
 If you work with opa, try changing some RegoRule entries to false and see if you are not allowed to e.g. list tables or schemas.
 
